// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table pads short rows so every row has the same number of cells 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="width: 100%; border-collapse: collapse;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  a
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  b
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  c
                </td>
              </tr>
              <tr>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  d
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                   
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                   
                </td>
              </tr>
              <tr>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  e
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  f
                </td>
                <td
                  align="left"
                  style="padding: 8px; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                   
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders a header row, striping and per-column alignment 1`] = `
<DocumentFragment>
  <table
    bgcolor="#fff000"
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 1px 4px 3px 2px; background-color: rgb(255, 240, 0);"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="width: 100%; border-collapse: collapse;"
            width="100%"
          >
            <tbody>
              <tr>
                <th
                  align="left"
                  bgcolor="#222222"
                  scope="col"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(255, 255, 255); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: left; background-color: rgb(34, 34, 34); font-weight: bold;"
                >
                  Product
                </th>
                <th
                  align="center"
                  bgcolor="#222222"
                  scope="col"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(255, 255, 255); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: center; background-color: rgb(34, 34, 34); font-weight: bold;"
                >
                  Qty
                </th>
                <th
                  align="right"
                  bgcolor="#222222"
                  scope="col"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(255, 255, 255); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: right; background-color: rgb(34, 34, 34); font-weight: bold;"
                >
                  Price
                </th>
              </tr>
              <tr>
                <td
                  align="left"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  Widget
                </td>
                <td
                  align="center"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: center; font-weight: normal;"
                >
                  2
                </td>
                <td
                  align="right"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: right; font-weight: normal;"
                >
                  19.00
                </td>
              </tr>
              <tr>
                <td
                  align="left"
                  bgcolor="#f7f7f7"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: left; background-color: rgb(247, 247, 247); font-weight: normal;"
                >
                  Gadget
                </td>
                <td
                  align="center"
                  bgcolor="#f7f7f7"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: center; background-color: rgb(247, 247, 247); font-weight: normal;"
                >
                  1
                </td>
                <td
                  align="right"
                  bgcolor="#f7f7f7"
                  style="padding: 12px; border: 2px solid #444222; color: rgb(17, 17, 17); font-family: "Nimbus Mono PS", "Courier New", "Cutive Mono", monospace; font-size: 12px; line-height: 1.5; vertical-align: top; text-align: right; background-color: rgb(247, 247, 247); font-weight: normal;"
                >
                  45.00
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="width: 100%; border-collapse: collapse;"
            width="100%"
          >
            <tbody>
              <tr>
                <th
                  align="left"
                  scope="col"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: bold;"
                >
                   
                </th>
                <th
                  align="left"
                  scope="col"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: bold;"
                >
                   
                </th>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders without a header row 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="width: 100%; border-collapse: collapse;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  Monday
                </td>
                <td
                  align="left"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  09:00
                </td>
              </tr>
              <tr>
                <td
                  align="left"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  Tuesday
                </td>
                <td
                  align="left"
                  style="padding: 8px; border: 1px solid #cccccc; font-size: 14px; line-height: 1.5; vertical-align: top; text-align: left; font-weight: normal;"
                >
                  10:00
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
